Fix navbar spacing

--- a/src/input.css
+++ b/src/input.css
@@ -7,4 +7,8 @@
     @apply border-2 rounded-md outline-none border-sky-100/60 bg-sky-100/60;
     @apply focus:border-sky-200/60 focus:bg-sky-200/60;
   }
+
+  .navbar-centering {
+    @apply flex flex-col items-center justify-center gap-0.5;
+  }
 }
