--- a/src/output.css
+++ b/src/output.css
@@ -991,16 +991,28 @@ video {
   k: string;
 }
 
+.\[\&\>a\]\:navbar-centering>a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.125rem;
+}
+
+.\[\&\>a\]\:flex-grow>a {
+  flex-grow: 1;
+}
+
+.\[\&\>a\]\:text-center>a {
+  text-align: center;
+}
+
 .\[\&\>div\]\:w-1>div {
   width: 0.25rem;
 }
 
 .\[\&\>div\]\:flex-grow>div {
   flex-grow: 1;
-}
-
-.\[\&\>div\]\:text-center>div {
-  text-align: center;
 }
 
 .\[\&_ion-icon\]\:text-lg ion-icon {
